<resources>
    <string name="app_name">TrabajoIntermedioPeliculas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">Fecha Vista (dd/mm/yyyy)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="titulo_pelicula">Titulo</string>
    <string name="cancelar">cancelar</string>
    <string name="agregarPelicula">Agregar</string>
    <string name="loginTextoRegistro">¿Ya eres usuario? Iniciar sesión</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="descripci_n_pelicula">Descripción Pelicula</string>
    <string name="actor_principal">Actor Principal</string>
    <string name="ciudad">Ciudad</string>
    <string name="fecha_de_visionado">Fecha de Visionado</string>
    <string name="clave">Clave</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="modificar">Modificar</string>
</resources>
