<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradiente"
    android:fitsSystemWindows="true"
    tools:context=".AgregarPeliculaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <!--  Titulo Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/agregar_titulo_modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/titulo_pelicula" />
        </android.support.design.widget.TextInputLayout>

        <!-- Label Apellidos -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/agregar_descripcion_modificar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textCapWords"
                android:hint="@string/descripci_n_pelicula" />
        </android.support.design.widget.TextInputLayout>

        <!-- Nombre de Usuario -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/agregar_actor_modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/actor_principal" />
        </android.support.design.widget.TextInputLayout>


        <!-- Ciudad Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/agregar_ciudad_modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/ciudad"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Fechas Label -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/ib_obtener_fecha_modificar"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_event_white_24dp"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_mostrar_fecha_picker_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/formato_fecha"
                android:inputType="date"

                android:lines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/boton_cancelar_modificar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/boton_modificar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/agregarPelicula"
            android:textColor="@android:color/white" />

    </LinearLayout>


</ScrollView>